# viernulvier-6

./: .env.example  .gitattributes  .gitignore  Justfile  LICENSE  README.md  codecov.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.husky/: pre-commit  (+1 more)
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bacon.toml
backend/.sqlx/: query-002024ab4c52459c1626e955ab3fab1cd9678afea7857c03cfc3c664d035a735.json  query-02abf53b4b08ad9502b0d3943619b02ad79d2903cee42f1aaef9995961fe98f6.json  query-04d26ae719cbe85fe167fdc7e47eacf21f05fd2fce5fe942d3cd2170deff9465.json  query-1cfb64add22efa1be20cc1f9ce10d2feb1495d6364b2bb7b5a4284c8034ced50.json  query-23288774bde397ff5fa4c0c6f8b6fb2987cc28c7cd1e67582e15984cb4b33c03.json  query-2391ed4ed05cd2a207e7e9fe82b2a6c4e49b4ee3575ec1ca5655e52b6445228f.json  query-29d6dadf0e59e553cb6363db468924d120ae6fc83af93d7b752f4420fde48547.json  query-314e043aaedee61242e1032779903666756576432200c47959105d4164d68ef7.json  query-356b1f8dff1ff063533b2e3029f20f167d430290f0062cba299f74ffd8c520c5.json  query-368715af7736f7ad6aa4f5cff904c7005c8ba207692d17428742b7523b529873.json  query-3ce33304e025c7df1069ae18a9e8470162f1f6791811e2255f1ac4dcf1419072.json  query-3feb1fd703ed2ffcb0d112bcf4e39b95258f96b0511819da49d819f0eaa2e3fb.json  query-44d644d8533a90e0607609a15dcb9d668904fbe7d04a4ce4d6f9150e39d16f02.json  query-59dbadf499db15c670b5be8248e0c4c90d1324f5aa03cf4e9778bcb444871d40.json  query-5d28180b7b9e81859f3fcdb6dcb444a5a78ab57056a5990db7b6ab5832159911.json  query-602238528fbd68e42123decfca884e923210141f6c5001fb89343a2abd5a8c31.json  query-64895b2d10d4625a882de81525791f44536b4d972b2fa6780b649a2fdae758a2.json  query-65c3882cb895b6ac5959e305e140c4deacf67b0ba10407aaf39b445e68b01c85.json  query-6b7d3ce59db00cebd87ded2ec901b6d1f305d4fd887a80024a545ce7806f5cf7.json  query-6c4d162b3b7d15056a4f965adf4302b57c7673e52726bdf8d55a5710cbaa5242.json  query-6f0e0c00346b83f1df3826f9b6e9d05223feca1bd183e28aee5c8c3903490342.json  query-726999293f03ebdbcba1692fcae842c5a64a4eacdd3905140fde5fc05b7802f5.json  query-757e7d766416b0e187eb955eaa8e08617988ec0b4337c375de1c5376b8802af1.json  query-76a2dc9cb93b84eff9a2db8ebc21f268360fbec1e114a105aacd7a386ba071e3.json  query-81bbbe7d2743b3f9a77c50d91b12f15abab22d866a0590cfb4d9d2b1279c39fb.json  query-8ba3a1e5b13d5b8d8219ffe623d8fddd870be7ebc085f544ae596261faa53a81.json  query-8cabb329a68bce004512bfd8cd799e8af259aa389b0183a68351eb1e9da734ea.json  query-a4920913ef128d008d700fde068370ed47e7247ec0015c308d21255d5454e196.json  query-a6814e021f36553e3c1094e74e89d1cd71d6212c450a3054ecc4763ed22be3af.json  query-a7d7f0db58f8a90c0c0613b57beb637ccb6a6cd088eb89d713d3258184a356b0.json  query-aaa547142b5812e0482fd7c54e2be201e9e3214da8aa0cb0d08dfe3526313c7e.json  query-adeee79a24f0437e8b65dd6173de498a1948f8fb6564c934c5f39f9f2d599859.json  query-b6d7f3f37af589a21025ac2927bf87ac8fae9155b47ff5bf5201a5deb21407f5.json  query-bff7d2257ec6a425230bdd7c2720f38d66b5d702438dce7bcdc58369d2428768.json  query-c25f732dc1439d7d9929bbd15c05780af91bae6a23b82bc00d200832fc67a4f7.json  query-c5cbb23dcee86e12bef4ddbd19884cd3ed7aedb915d7455a2122b90d93202b4d.json  query-c7ed06b2b6b31a33fff61a40071baa7622222c8accba149cec3f0b40868905d3.json  query-e2e620d2b987015dc20539cec756320d5fe31e17b9f9e0d412f9d84d26bb1c36.json  query-e4f364d70e63fcc393e493e39aec9a619e0c3223b4819fdef1eaabcd36e65600.json  query-e8d16047e31526faa78e499afb60c35df9b213fe87eb089ea1da905c523f4c09.json  (+6 more)
backend/api/: Cargo.toml
backend/api/src/: error.rs  helper.rs  lib.rs  seed.rs
backend/database/: Cargo.toml
backend/database/src/: error.rs  lib.rs
backend/database/tests/: import_repo.rs
backend/frontend/: Dockerfile
backend/migrations/: 20260224000000_initial.down.sql  20260224000000_initial.sql  20260224000000_initial.up.sql  20260224143806_info.down.sql  20260224143806_info.up.sql  20260227093503_add_auth.up.sql  20260227093503_auth.down.sql  20260227093503_auth.up.sql  20260303212449_make_location_name_nullable.down.sql  20260303212449_make_location_name_nullable.up.sql  20260304171633_drop_slug_from_locations.down.sql  20260304171633_drop_slug_from_locations.up.sql  20260306112959_add_table_spaces.up.sql  20260306151410_halls_swap_locationUUID_for_spaceUUID.down.sql  20260306151410_halls_swap_locationUUID_for_spaceUUID.up.sql  20260308210436_sessions.up.sql  20260312141953_cascade_delete_spaces_and_locations.down.sql  20260312141953_cascade_delete_spaces_and_locations.up.sql  20260314000000_rename_event_time_columns.down.sql  20260314000000_rename_event_time_columns.up.sql  20260314123706_tagging.down.sql  20260314123706_tagging.up.sql  20260317170355_make_ended_at_nullable.down.sql  20260317170355_make_ended_at_nullable.up.sql  20260317170355_make_ends_at_nullable.down.sql  20260317170355_make_ends_at_nullable.up.sql  20260322000000_seed_admin.up.sql  20260322094814_add_user_role.up.sql  20260323000000_media.down.sql  20260323000000_media.up.sql  20260323000001_relations.down.sql  20260323000001_relations.up.sql  20260323120000_unique_source_ids.down.sql  20260323120000_unique_source_ids.up.sql  20260324000000_production_translations.down.sql  20260324000000_production_translations.up.sql  20260324000001_seed_admin_user.down.sql  20260324000001_seed_admin_user.up.sql  20260324100000_tag_translations.down.sql  20260324100000_tag_translations.up.sql  (+64 more)
backend/seed/: CLAUDE.md  README.md  SERIES_INVESTIGATION.md  TODO.md
backend/src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
backend/tests/: admin.rs  article.rs  artist.rs  collection.rs  event.rs  hall.rs  import_csv_parser.rs  import_end_to_end.rs  import_event_adapter.rs  import_handlers_mapping.rs  import_handlers_queries.rs  import_handlers_rollback.rs  import_handlers_transitions.rs  import_handlers_update_row.rs  import_handlers_upload.rs  import_production_adapter.rs  import_registry.rs  import_worker_commit.rs  import_worker_dry_run.rs  import_worker_iteration.rs  importer_errors.rs  location.rs  media.rs  production.rs  series.rs  space.rs  stats.rs  tagging.rs  taxonomy.rs  version.rs
(+753 files in other folders)
