[package]
name = "viernulvier_api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "viernulvier_api"
path = "src/main.rs"

[workspace.lints.clippy]
unused_async = "warn"
indexing_slicing = "warn"
dbg_macro = "warn"
# pedantic
ignored_unit_patterns = "warn"
uninlined_format_args = "warn"
cast_lossless = "warn"
single_match_else = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
# nursery
use_self = "warn"

[lints]
workspace = true

[workspace]
members = ["database", "api"]

[workspace.dependencies]
tracing = { version = "=0.1", default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
uuid = { version = "1", features = ["v7"], default-features = false }
thiserror = { version = "2", default-features = false }
chrono = "0.4"

[dependencies]
database = { path = "database" }
api = { path = "api" }

tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

axum = "0.8.8"
dotenvy = "0.15.7"
serde_json = "1.0.149"
tracing-subscriber = { version = "=0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
tokio = { version = "1.49.0", default-features = false, features = [
    "rt-multi-thread",
    "signal",
    "process",
] }
tower-http = { version = "0.6.6", default-features = false, features = [
    "trace",
    "compression-zstd",
    "cors",
] }
o2o = "0.5.4"
utoipa = { version = "5.4.0", features = ["uuid", "axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"
axum-extra = { version = "0.12.5", features = ["cookie"] }
jsonwebtoken={ version = "10.3.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
base64 = "0.22.1"
rand = "0.10"
sha2 = "0.10.9"
hex = "0.4.3"
time = "0.3.47"

[dev-dependencies]
http-body-util = "0.1.2"
tower = { version = "0.5", default-features = false, features = ["util"] }
mime = "0.3"
test-log = {version = "0.2", default-features = false, features = ["trace"]}
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
] }
