[package]
name = "api"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "api"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
database = { path = "../database" }
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.13.2", features = ["json", "query", "stream"] }
ormlite = { version = "0.24.3", default-features = false, features = ["sqlite"] }
futures = "0.3.32"
slug = "0.1.6"
sha2 = "0.10"
hex = "0.4"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
tokio = { version = "1.50.0", features = ["fs", "io-util", "rt"] }
serde_json = "1.0.149"
base64 = "0.22.1"
tempfile = "3.27.0"
imagesize = "0.13"
thiserror.workspace = true
