[package]
name = "api"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "api"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
database = { path = "../database" }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
aws-sdk-s3 = { workspace = true }
thiserror.workspace = true

reqwest = { version = "0.13", features = ["json", "query", "stream"] }
ormlite = { version = "0.24", default-features = false, features = ["sqlite"] }
futures = "0.3.32"
slug = "0.1.6"
hex = "0.4"
base64 = "0.22.1"
tempfile = "3.27.0"
imagesize = "0.14"
