[package]
name = "api"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "fetch_404"
path = "src/bin/fetch_404.rs"

[lints]
workspace = true

[features]
default = []
ai-normalization = ["dep:scraper"]

[dependencies]
database = { path = "../database" }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres"] }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt", "rt-multi-thread", "macros", "time"] }
tracing-subscriber = { version = "=0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
sha2 = { workspace = true }
aws-sdk-s3 = { workspace = true }
thiserror.workspace = true
reqwest = { version = "0.13.2", features = ["json", "query", "stream"] }
ormlite = { version = "0.24.3", default-features = false, features = ["sqlite"] }
futures = "0.3.32"
slug = "0.1.6"
hex = "0.4"
base64 = "0.22.1"
tempfile = "3.27.0"
imagesize = "0.14"
scraper = { version = "0.20", optional = true }

[dev-dependencies]
wiremock = "0.6"
