[package]
name = "database"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "database"
path = "src/lib.rs"

[dependencies]
thiserror = { version = "2.0.16", default-features = false }
tracing = { version = "=0.1", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "json",
    "chrono",
    "uuid",
] }
ormlite = { version = "0.24.3", features = ["default-postgres"] }
utoipa = { version = "5.4.0", features = ["uuid"] }
