[package]
name = "database"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "database"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "json",
    "chrono",
    "uuid",
] }
ormlite = { version = "0.24.3", features = ["default-postgres"] }
utoipa = { version = "5.4.0", features = ["uuid"] }
